--- a/package.json
+++ b/package.json
@@ -174,191 +174,242 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    },
     "./package.json": "./package.json",
     "./style.css": "./dist/style.css",
     "./MDXEditor": {
+      "types": "./dist/MDXEditor.d.ts",
       "import": "./dist/MDXEditor.js",
-      "types": "./dist/MDXEditor.d.ts"
+      "default": "./dist/MDXEditor.js"
     },
     "./directive-editors/AdmonitionDirectiveDescriptor": {
+      "types": "./dist/directive-editors/AdmonitionDirectiveDescriptor.d.ts",
       "import": "./dist/directive-editors/AdmonitionDirectiveDescriptor.js",
-      "types": "./dist/directive-editors/AdmonitionDirectiveDescriptor.d.ts"
+      "default": "./dist/directive-editors/AdmonitionDirectiveDescriptor.js"
     },
     "./directive-editors/GenericDirectiveEditor": {
+      "types": "./dist/directive-editors/GenericDirectiveEditor.d.ts",
       "import": "./dist/directive-editors/GenericDirectiveEditor.js",
-      "types": "./dist/directive-editors/GenericDirectiveEditor.d.ts"
+      "default": "./dist/directive-editors/GenericDirectiveEditor.js"
     },
     "./jsx-editors/GenericJsxEditor": {
+      "types": "./dist/jsx-editors/GenericJsxEditor.d.ts",
       "import": "./dist/jsx-editors/GenericJsxEditor.js",
-      "types": "./dist/jsx-editors/GenericJsxEditor.d.ts"
+      "default": "./dist/jsx-editors/GenericJsxEditor.js"
     },
     "./plugins/core/PropertyPopover": {
+      "types": "./dist/plugins/core/PropertyPopover.d.ts",
       "import": "./dist/plugins/core/PropertyPopover.js",
-      "types": "./dist/plugins/core/PropertyPopover.d.ts"
+      "default": "./dist/plugins/core/PropertyPopover.js"
     },
     "./plugins/core/NestedLexicalEditor": {
+      "types": "./dist/plugins/core/NestedLexicalEditor.d.ts",
       "import": "./dist/plugins/core/NestedLexicalEditor.js",
-      "types": "./dist/plugins/core/NestedLexicalEditor.d.ts"
+      "default": "./dist/plugins/core/NestedLexicalEditor.js"
     },
     "./plugins/codeblock": {
       "types": "./dist/plugins/codeblock/index.d.ts",
-      "import": "./dist/plugins/codeblock/index.js"
+      "import": "./dist/plugins/codeblock/index.js",
+      "default": "./dist/plugins/codeblock/index.js"
     },
     "./plugins/codemirror": {
       "types": "./dist/plugins/codemirror/index.d.ts",
-      "import": "./dist/plugins/codemirror/index.js"
+      "import": "./dist/plugins/codemirror/index.js",
+      "default": "./dist/plugins/codemirror/index.js"
     },
     "./plugins/core": {
       "types": "./dist/plugins/core/index.d.ts",
-      "import": "./dist/plugins/core/index.js"
+      "import": "./dist/plugins/core/index.js",
+      "default": "./dist/plugins/core/index.js"
     },
     "./plugins/diff-source": {
       "types": "./dist/plugins/diff-source/index.d.ts",
-      "import": "./dist/plugins/diff-source/index.js"
+      "import": "./dist/plugins/diff-source/index.js",
+      "default": "./dist/plugins/diff-source/index.js"
     },
     "./plugins/directives": {
       "types": "./dist/plugins/directives/index.d.ts",
-      "import": "./dist/plugins/directives/index.js"
+      "import": "./dist/plugins/directives/index.js",
+      "default": "./dist/plugins/directives/index.js"
     },
     "./plugins/frontmatter": {
       "types": "./dist/plugins/frontmatter/index.d.ts",
-      "import": "./dist/plugins/frontmatter/index.js"
+      "import": "./dist/plugins/frontmatter/index.js",
+      "default": "./dist/plugins/frontmatter/index.js"
     },
     "./plugins/headings": {
       "types": "./dist/plugins/headings/index.d.ts",
-      "import": "./dist/plugins/headings/index.js"
+      "import": "./dist/plugins/headings/index.js",
+      "default": "./dist/plugins/headings/index.js"
     },
     "./plugins/image": {
       "types": "./dist/plugins/image/index.d.ts",
-      "import": "./dist/plugins/image/index.js"
+      "import": "./dist/plugins/image/index.js",
+      "default": "./dist/plugins/image/index.js"
     },
     "./plugins/jsx": {
       "types": "./dist/plugins/jsx/index.d.ts",
-      "import": "./dist/plugins/jsx/index.js"
+      "import": "./dist/plugins/jsx/index.js",
+      "default": "./dist/plugins/jsx/index.js"
     },
     "./plugins/link": {
       "types": "./dist/plugins/link/index.d.ts",
-      "import": "./dist/plugins/link/index.js"
+      "import": "./dist/plugins/link/index.js",
+      "default": "./dist/plugins/link/index.js"
     },
     "./plugins/link-dialog": {
       "types": "./dist/plugins/link-dialog/index.d.ts",
-      "import": "./dist/plugins/link-dialog/index.js"
+      "import": "./dist/plugins/link-dialog/index.js",
+      "default": "./dist/plugins/link-dialog/index.js"
     },
     "./plugins/lists": {
       "types": "./dist/plugins/lists/index.d.ts",
-      "import": "./dist/plugins/lists/index.js"
+      "import": "./dist/plugins/lists/index.js",
+      "default": "./dist/plugins/lists/index.js"
     },
     "./plugins/markdown-shortcut": {
       "types": "./dist/plugins/markdown-shortcut/index.d.ts",
-      "import": "./dist/plugins/markdown-shortcut/index.js"
+      "import": "./dist/plugins/markdown-shortcut/index.js",
+      "default": "./dist/plugins/markdown-shortcut/index.js"
     },
     "./plugins/quote": {
       "types": "./dist/plugins/quote/index.d.ts",
-      "import": "./dist/plugins/quote/index.js"
+      "import": "./dist/plugins/quote/index.js",
+      "default": "./dist/plugins/quote/index.js"
     },
     "./plugins/sandpack": {
       "types": "./dist/plugins/sandpack/index.d.ts",
-      "import": "./dist/plugins/sandpack/index.js"
+      "import": "./dist/plugins/sandpack/index.js",
+      "default": "./dist/plugins/sandpack/index.js"
     },
     "./plugins/table": {
       "types": "./dist/plugins/table/index.d.ts",
-      "import": "./dist/plugins/table/index.js"
+      "import": "./dist/plugins/table/index.js",
+      "default": "./dist/plugins/table/index.js"
     },
     "./plugins/thematic-break": {
       "types": "./dist/plugins/thematic-break/index.d.ts",
-      "import": "./dist/plugins/thematic-break/index.js"
+      "import": "./dist/plugins/thematic-break/index.js",
+      "default": "./dist/plugins/thematic-break/index.js"
     },
     "./plugins/toolbar": {
       "types": "./dist/plugins/toolbar/index.d.ts",
-      "import": "./dist/plugins/toolbar/index.js"
+      "import": "./dist/plugins/toolbar/index.js",
+      "default": "./dist/plugins/toolbar/index.js"
     },
     "./plugins/toolbar/components/BlockTypeSelect": {
       "types": "./dist/plugins/toolbar/components/BlockTypeSelect.d.ts",
-      "import": "./dist/plugins/toolbar/components/BlockTypeSelect.js"
+      "import": "./dist/plugins/toolbar/components/BlockTypeSelect.js",
+      "default": "./dist/plugins/toolbar/components/BlockTypeSelect.js"
     },
     "./plugins/toolbar/components/BoldItalicUnderlineToggles": {
       "types": "./dist/plugins/toolbar/components/BoldItalicUnderlineToggles.d.ts",
-      "import": "./dist/plugins/toolbar/components/BoldItalicUnderlineToggles.js"
+      "import": "./dist/plugins/toolbar/components/BoldItalicUnderlineToggles.js",
+      "default": "./dist/plugins/toolbar/components/BoldItalicUnderlineToggles.js"
     },
     "./plugins/toolbar/components/ChangeAdmonitionType": {
       "types": "./dist/plugins/toolbar/components/ChangeAdmonitionType.d.ts",
-      "import": "./dist/plugins/toolbar/components/ChangeAdmonitionType.js"
+      "import": "./dist/plugins/toolbar/components/ChangeAdmonitionType.js",
+      "default": "./dist/plugins/toolbar/components/ChangeAdmonitionType.js"
     },
     "./plugins/toolbar/components/ChangeCodeMirrorLanguage": {
       "types": "./dist/plugins/toolbar/components/ChangeCodeMirrorLanguage.d.ts",
-      "import": "./dist/plugins/toolbar/components/ChangeCodeMirrorLanguage.js"
+      "import": "./dist/plugins/toolbar/components/ChangeCodeMirrorLanguage.js",
+      "default": "./dist/plugins/toolbar/components/ChangeCodeMirrorLanguage.js"
     },
     "./plugins/toolbar/components/CodeToggle": {
       "types": "./dist/plugins/toolbar/components/CodeToggle.d.ts",
-      "import": "./dist/plugins/toolbar/components/CodeToggle.js"
+      "import": "./dist/plugins/toolbar/components/CodeToggle.js",
+      "default": "./dist/plugins/toolbar/components/CodeToggle.js"
     },
     "./plugins/toolbar/components/CreateLink": {
       "types": "./dist/plugins/toolbar/components/CreateLink.d.ts",
-      "import": "./dist/plugins/toolbar/components/CreateLink.js"
+      "import": "./dist/plugins/toolbar/components/CreateLink.js",
+      "default": "./dist/plugins/toolbar/components/CreateLink.js"
     },
     "./plugins/toolbar/components/DiffSourceToggleWrapper": {
       "types": "./dist/plugins/toolbar/components/DiffSourceToggleWrapper.d.ts",
-      "import": "./dist/plugins/toolbar/components/DiffSourceToggleWrapper.js"
+      "import": "./dist/plugins/toolbar/components/DiffSourceToggleWrapper.js",
+      "default": "./dist/plugins/toolbar/components/DiffSourceToggleWrapper.js"
     },
     "./plugins/toolbar/components/InsertAdmonition": {
       "types": "./dist/plugins/toolbar/components/InsertAdmonition.d.ts",
-      "import": "./dist/plugins/toolbar/components/InsertAdmonition.js"
+      "import": "./dist/plugins/toolbar/components/InsertAdmonition.js",
+      "default": "./dist/plugins/toolbar/components/InsertAdmonition.js"
     },
     "./plugins/toolbar/components/InsertCodeBlock": {
       "types": "./dist/plugins/toolbar/components/InsertCodeBlock.d.ts",
-      "import": "./dist/plugins/toolbar/components/InsertCodeBlock.js"
+      "import": "./dist/plugins/toolbar/components/InsertCodeBlock.js",
+      "default": "./dist/plugins/toolbar/components/InsertCodeBlock.js"
     },
     "./plugins/toolbar/components/InsertFrontmatter": {
       "types": "./dist/plugins/toolbar/components/InsertFrontmatter.d.ts",
-      "import": "./dist/plugins/toolbar/components/InsertFrontmatter.js"
+      "import": "./dist/plugins/toolbar/components/InsertFrontmatter.js",
+      "default": "./dist/plugins/toolbar/components/InsertFrontmatter.js"
     },
     "./plugins/toolbar/components/InsertImage": {
       "types": "./dist/plugins/toolbar/components/InsertImage.d.ts",
-      "import": "./dist/plugins/toolbar/components/InsertImage.js"
+      "import": "./dist/plugins/toolbar/components/InsertImage.js",
+      "default": "./dist/plugins/toolbar/components/InsertImage.js"
     },
     "./plugins/toolbar/components/InsertSandpack": {
       "types": "./dist/plugins/toolbar/components/InsertSandpack.d.ts",
-      "import": "./dist/plugins/toolbar/components/InsertSandpack.js"
+      "import": "./dist/plugins/toolbar/components/InsertSandpack.js",
+      "default": "./dist/plugins/toolbar/components/InsertSandpack.js"
     },
     "./plugins/toolbar/components/InsertTable": {
       "types": "./dist/plugins/toolbar/components/InsertTable.d.ts",
-      "import": "./dist/plugins/toolbar/components/InsertTable.js"
+      "import": "./dist/plugins/toolbar/components/InsertTable.js",
+      "default": "./dist/plugins/toolbar/components/InsertTable.js"
     },
     "./plugins/toolbar/components/InsertThematicBreak": {
       "types": "./dist/plugins/toolbar/components/InsertThematicBreak.d.ts",
-      "import": "./dist/plugins/toolbar/components/InsertThematicBreak.js"
+      "import": "./dist/plugins/toolbar/components/InsertThematicBreak.js",
+      "default": "./dist/plugins/toolbar/components/InsertThematicBreak.js"
     },
     "./plugins/toolbar/components/KitchenSinkToolbar": {
       "types": "./dist/plugins/toolbar/components/KitchenSinkToolbar.d.ts",
-      "import": "./dist/plugins/toolbar/components/KitchenSinkToolbar.js"
+      "import": "./dist/plugins/toolbar/components/KitchenSinkToolbar.js",
+      "default": "./dist/plugins/toolbar/components/KitchenSinkToolbar.js"
     },
     "./plugins/toolbar/components/ListsToggle": {
       "types": "./dist/plugins/toolbar/components/ListsToggle.d.ts",
-      "import": "./dist/plugins/toolbar/components/ListsToggle.js"
+      "import": "./dist/plugins/toolbar/components/ListsToggle.js",
+      "default": "./dist/plugins/toolbar/components/ListsToggle.js"
     },
     "./plugins/toolbar/components/ShowSandpackInfo": {
       "types": "./dist/plugins/toolbar/components/ShowSandpackInfo.d.ts",
-      "import": "./dist/plugins/toolbar/components/ShowSandpackInfo.js"
+      "import": "./dist/plugins/toolbar/components/ShowSandpackInfo.js",
+      "default": "./dist/plugins/toolbar/components/ShowSandpackInfo.js"
     },
     "./plugins/toolbar/components/UndoRedo": {
       "types": "./dist/plugins/toolbar/components/UndoRedo.d.ts",
-      "import": "./dist/plugins/toolbar/components/UndoRedo.js"
+      "import": "./dist/plugins/toolbar/components/UndoRedo.js",
+      "default": "./dist/plugins/toolbar/components/UndoRedo.js"
     },
     "./plugins/toolbar/primitives/DialogButton": {
       "types": "./dist/plugins/toolbar/primitives/DialogButton.d.ts",
-      "import": "./dist/plugins/toolbar/primitives/DialogButton.js"
+      "import": "./dist/plugins/toolbar/primitives/DialogButton.js",
+      "default": "./dist/plugins/toolbar/primitives/DialogButton.js"
     },
     "./plugins/toolbar/primitives/TooltipWrap": {
       "types": "./dist/plugins/toolbar/primitives/TooltipWrap.d.ts",
-      "import": "./dist/plugins/toolbar/primitives/TooltipWrap.js"
+      "import": "./dist/plugins/toolbar/primitives/TooltipWrap.js",
+      "default": "./dist/plugins/toolbar/primitives/TooltipWrap.js"
     },
     "./plugins/toolbar/primitives/select": {
       "types": "./dist/plugins/toolbar/primitives/select.d.ts",
-      "import": "./dist/plugins/toolbar/primitives/select.js"
+      "import": "./dist/plugins/toolbar/primitives/select.js",
+      "default": "./dist/plugins/toolbar/primitives/select.js"
     },
     "./plugins/toolbar/primitives/toolbar": {
       "types": "./dist/plugins/toolbar/primitives/toolbar.d.ts",
-      "import": "./dist/plugins/toolbar/primitives/toolbar.js"
+      "import": "./dist/plugins/toolbar/primitives/toolbar.js",
+      "default": "./dist/plugins/toolbar/primitives/toolbar.js"
     }
   }
 }
