--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@codemirror/state": "^6.2.1",
     "@codemirror/view": "6.15.3",
     "@codesandbox/sandpack-react": "^2.6.7",
+    "@hookform/resolvers": "^3.3.1",
     "@lexical/clipboard": "^0.11.1",
     "@lexical/code": "^0.11.1",
     "@lexical/link": "^0.11.1",
@@ -57,6 +58,8 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "ajv": "^8.12.0",
+    "ajv-errors": "^3.0.0",
     "classnames": "^2.3.2",
     "downshift": "^7.6.0",
     "hast-util-raw": "^8.0.0",
